crates/swc_css_parser/tests/errors/percent/minus/output.stderr
error: Expected a property value
 --> $DIR/tests/errors/percent/minus/input.css:1:12
  |
1 | a { width: -0.%; }
  |            ^^^^

